# m61-tng

./: .gitignore  README.md   pyproject.toml
batch/: run_spectra_array.sh  run_spectra_single.sh
data/: M61_DIISC_Table1_Table2.csv  los_endpoints_M61_matched_top20.csv  los_endpoints_M61_matched_top20.json  m61_closest_matches_3d.csv
notebooks/: run_spectra_one_sid.py  spectra_batch_module.py
scripts/: orient.py  orient_m61.py
