[project]
name = "m61-tng"
version = "0.1.0"
description = "M61 analysis using TNG cutouts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "astropy",
  "astroquery",
  "specutils",
  "h5py",
  "hdf5plugin",
  "yt",
  "trident",
  "scida",
  "jupyterlab",
  "ipykernel",
  "tqdm",
  "rich",
  "unyt",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"